# wf-psf

./: .buildinfo  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .style.yapf  @  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_WORKFLOW.md  DemoRegistryPattern.ipynb  Dockerfile  README.md  Untitled.ipynb  Untitled3.ipynb  WaveDiffRunExercise.ipynb  about.html  api.html  basic_execution.html  configuration.html  debug.sh  dependencies.html  environment.yml  environment_gpu.yml  genindex.html  index.html  installation.html  job.sh  macair.sh  main_metrics.ipynb  modules.html  monoPSF_metric_gen_Tobias.ipynb  objects.inv  py-modindex.html  pyproject.toml  pytest.xml  requirements.txt  search.html  searchindex.js  (+35 more)
.doctrees/: about.doctree  basic_execution.doctree  configuration.doctree  dependencies.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  toc.doctree  wf_psf.data.doctree  wf_psf.data.training_preprocessing.doctree  wf_psf.doctree  wf_psf.info.doctree  wf_psf.metrics.doctree  wf_psf.metrics.metrics.doctree  wf_psf.metrics.metrics_interface.doctree  wf_psf.plotting.doctree  wf_psf.plotting.plot_optimisation_metrics.doctree  wf_psf.plotting.plots_interface.doctree  wf_psf.psf_models.doctree  wf_psf.psf_models.psf_model_parametric.doctree  wf_psf.psf_models.psf_model_semiparametric.doctree  wf_psf.psf_models.psf_models.doctree  wf_psf.psf_models.tf_layers.doctree  wf_psf.psf_models.tf_modules.doctree  wf_psf.psf_models.tf_psf_field.doctree  wf_psf.psf_models.zernikes.doctree  wf_psf.run.doctree  wf_psf.sims.SimPSFToolkit.doctree  wf_psf.sims.doctree  wf_psf.training.doctree  wf_psf.training.train.doctree  wf_psf.training.train_utils.doctree  wf_psf.utils.configs_handler.doctree  wf_psf.utils.doctree  wf_psf.utils.graph_utils.doctree  wf_psf.utils.io.doctree  wf_psf.utils.read_config.doctree  wf_psf.utils.utils.doctree  z_ref.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help-.md  help-wanted.md  (+4 more)
_autosummary/: wf_psf.data.html  wf_psf.data.training_preprocessing.html  wf_psf.metrics.html  wf_psf.metrics.metrics.html  wf_psf.metrics.metrics_interface.html  wf_psf.plotting.html  wf_psf.plotting.plots_interface.html  wf_psf.psf_models.html  wf_psf.psf_models.psf_model_parametric.html  wf_psf.psf_models.psf_model_physical_polychromatic.html  wf_psf.psf_models.psf_model_semiparametric.html  wf_psf.psf_models.psf_models.html  wf_psf.psf_models.tf_layers.html  wf_psf.psf_models.tf_modules.html  wf_psf.psf_models.tf_psf_field.html  wf_psf.psf_models.zernikes.html  wf_psf.run.html  wf_psf.sims.html  wf_psf.sims.psf_simulator.html  wf_psf.sims.spatial_varying_psf.html  wf_psf.training.html  wf_psf.training.train.html  wf_psf.training.train_utils.html  wf_psf.utils.ccd_misalignments.html  wf_psf.utils.centroids.html  wf_psf.utils.configs_handler.html  wf_psf.utils.graph_utils.html  wf_psf.utils.html  wf_psf.utils.io.html  wf_psf.utils.preprocessing.html  wf_psf.utils.read_config.html  wf_psf.utils.utils.html
_modules/: index.html
_sources/: about.md.txt  basic_execution.md.txt  configuration.md.txt  dependencies.md.txt  installation.md.txt  wf_psf.data.rst.txt  wf_psf.rst.txt  wf_psf.utils.configs_handler.rst.txt  wf_psf.utils.read_config.rst.txt  wf_psf.utils.rst.txt
changelog.d/: 20251217_142619_jennifer.pollack_add_changelogmd.md  20260123_154449_jennifer.pollack_add_pre_commit_hooks.md  20260123_160331_jennifer.pollack_159_psf_output_from_trained_model.md  20260123_164629_jennifer.pollack_configurable_optimizer.md  scriv.ini
config/: PR_configs_v2.yaml  PR_configs_v3.yaml  PR_metrics_config_v3.yaml  PR_plotting_config.yaml  config.yaml  configs.yaml  data_config.yaml  features_config.yaml  inference_conf.yaml  logging.conf  metrics_config.yaml  plotting_config.yaml  training_config.yaml  training_config_test.yaml
debug/: candide_helper_eval_plot_script.py  candide_job_eval_plot.sh  debug_tf_model.py  jz_helper_eval_plot_script.py  jz_job_eval_plot.sh  table-WFE-error-metrics-rerun.ipynb
developer/: code_of_conduct.html  contributing.html  dev_workflow.html  index.html
explore_SEDs/: explore-Morgan-SEDs.ipynb
jz-submissions/: README.md
long-runs/: Input_data.md  LR-PSF-field-gen-coherentFields.py  LR-PSF-field-generation.py  README.md  alternative_train_eval_script.py  basic_evaluation_script.py  basic_param_training_script.py  basic_training_script.py  l2_param_tr_ev.py  model_training.py  train_eval_plot_script_click.py  train_eval_plot_script_click_multi_cycle.py  train_eval_script.py  train_eval_script_click.py  training_script.py
method-comparison/: README.md
notebooks/: PSF-generator.ipynb  test-PA-zernike-cubes.ipynb
src/: pytest.xml
tf_notebooks/: EUSIPCO_tf_PSF_NonParam_poly.ipynb  psf_field_v2.ipynb  sandbox poly-psf-tf.ipynb  testing-downsample.ipynb  tf_PSF_NonParam_matrix_fact-3.ipynb  tf_PSF_model_2.ipynb  tf_PSF_model_basic_estimation.ipynb  tf_PSF_model_diff_zernike_orders.ipynb  tf_PSF_model_different_noise.ipynb
wf_psf/: GenFieldPSF.py  GenPolyFieldPSF.py  SimPSFToolkit.py  __init__.py  gen_example.py  graph_utils.py  info.py  io.py  method_comp_utils.py  metrics.py  read_config.py  run.py  run_jw.py  sandbox.py  script_utils.py  tf-param-model.py  tf_alt_psf_models.py  tf_layers.py  tf_mccd_psf_field.py  tf_modules.py  tf_psf_field.py  tf_wf_psf.py  train.py  train_utils.py  utils.py  zernikes.py
(+752 files in other folders)
