[project]
name = "wf_psf"
requires-python = ">=3.9"
authors = [
    { "name" = "Tobias Liaudat", "email" = "tobiasliaudat@gmail.com"},
    { "name" = "Jennifer Pollack", "email" = "jennifer.pollack@cea.fr"},
]
maintainers = [
    { "name" = "Jennifer Pollack", "email" = "jennifer.pollack@cea.fr" },
]

description = 'A software framework to perform Differentiable wavefront-based PSF modelling.'
dependencies = [
    "numpy>=1.26.4,<2.0",
    "scipy",
    "tensorflow==2.11.0",
    "tensorflow-addons",
    "tensorflow-estimator",
    "zernike",
    "opencv-python",
    "pillow",
    "galsim",
    "astropy",
    "matplotlib",
    "seaborn",
]

version = "2.0.1"

[project.optional-dependencies]
docs = [
    "importlib_metadata",    
    "myst-parser",
    "numpydoc",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinxawesome-theme",
    "sphinx-gallery",
    "sphinxemoji",
    "sphinx_rtd_theme",

]

lint = [
    "ruff",
]

release = [
    "build",
    "twine",
]

test = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "pytest-emoji",
  "pytest-raises",
  "pytest-xdist",
]

# Install for development
dev = ["wf_psf[docs,lint,release,test]"]

[project.scripts]
wavediff = "wf_psf.run:mainMethod"

[tool.ruff]
line-length = 88
indent-width = 4

# Enable more rules: Pyupgrade (`UP`) and Pydocstyle (`D`)
[tool.ruff.lint]
extend-select = ["UP", "D"]

# Use numpy-style docstrings
[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Enable Ruff's built-in formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.setuptools.package-data]
"wf_psf.config" = ["*.conf"]

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--emoji",
    "--cov=wf_psf",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--junitxml=pytest.xml",

]
testpaths = ["src/wf_psf"]
